# eat-ou

./: CNAME  Cargo.toml  README.md  eat-ou.js  eat-ou.wasm  food.json
manifests/: eat.appcache  manifest.json
scripts/: add-service-worker.js  home-screen.js
src/: lib.rs  schedule.rs  ui.rs  www.rs
static/: eat.appcache  index.html  service-worker.js  style.css
static/css/: style.css
static/manifests/: eat.appcache
static/scripts/: home-screen.js
tests/: restaurant.rs
